--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
+               android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyCzRhZ42sAHNKE9O7gTQG1HO1Lt-PjBcGk"
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
